--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow" />
   <meta name="description" content="[titre] - [courte description]." />
-  <title>[titre]</title>
+  <title>COMPOSIT SYSTEM</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
  <!--<link rel="icon" type="image/png" href="[image du favicon]">-->
@@ -14,11 +14,10 @@
   <header>
     <div class="container">
       <h1 class="logo">
-  <span class="logo-bold">[Ti</span>tre]
+  <span class="logo-bold">Composit</span> System
 </h1>
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="a-propos.html">À propos</a>
     <a href="Contact.html">Contact</a>
   </nav>
     </div>
@@ -27,8 +26,9 @@
 <main class="annonces-section">
   
   <section class="intro">
-  <h1>Bienvenue sur [titre]</h1>
-  <p>[Description.]</p>
+  <h1>Bienvenue sur Composit System</h1>
+  <h2>Hardtop et tonneau cover pour 4x4</h2>
+<p>Fabriquant des hardtop FLEURET. Distributeur des hardtop et tonneau cover LINE X. Importateur des hardtop et accessoires AVENGERTOP.</p>
 </section>
 </section>
   
@@ -48,9 +48,16 @@
 
   <div class="filtre-bloc" id="filtre-marque">
     <p class="filtre-titre">Marque</p>
+    <label><input type="checkbox" value="Fiat"> Fiat</label>
+    <label><input type="checkbox" value="Ford"> Ford</label>
+    <label><input type="checkbox" value="Isuzu"> Isuzu</label>
+    <label><input type="checkbox" value="Land Rover"> Land Rover</label>
     <label><input type="checkbox" value="Mercedes"> Mercedes</label>
+    <label><input type="checkbox" value="Mitsubishi"> Mitsubishi</label>
     <label><input type="checkbox" value="Nissan"> Nissan</label>
+    <label><input type="checkbox" value="Suzuki"> Suzuki</label>
     <label><input type="checkbox" value="Toyota"> Toyota</label>
+    <label><input type="checkbox" value="Volkswagen"> Volkswagen</label>
   </div>
 
 </div>
@@ -61,10 +68,8 @@
   </div>
   </main>
 
-
-
   <footer>
-     <p>&copy; 2025 [titre] - <a href="mentions-legales.html">Mentions légales</a></p>
+     <p>&copy; 2025 Composit System - <a href="mentions-legales.html">Mentions légales</a></p>
   </footer>
 <script src="script.js"></script>
 </body>
