--- a/Contact.html
+++ b/Contact.html
@@ -1,1 +1,42 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Composit System - Hardtop et tonneau cover pour 4x4." />
+  <title>Contact - Composit System</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+  <!--<link rel="icon" type="image/png" href="">-->
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="logo">Composit <span class="logo-bold">System</span></div>
+      <nav>
+        <a href="index.html">Accueil</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="contact">
+  <h1>Contact</h1>
+  <p>Adresse : </p>
+
+  <p>e-mail : </p>
+
+  <p>tel : </p>
+</section>
+  </main>
+
+  <footer>
+    <p>2025 Composit System –</p>
+  </footer>
+</body>
+</html>
