--- a/data/hardtop-mercedes-x-class-double-cabine-2018.html
+++ b/data/hardtop-mercedes-x-class-double-cabine-2018.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercedes class X</title>
-  <meta name="description" content="Description courte de la voiture.">
+  <meta name="COmposit System" content="Hardtop Mercedes class X">
   <link rel="stylesheet" href="/style.css">
   <style>
     /* Styles spécifiques au slider */
@@ -66,9 +66,9 @@
   <!-- SLIDER -->
   <div class="slider">
     <div class="slides">
-      <img src="/images/.jpg" alt="Hardtop Mercedes class X">
-      <img src="/images/.jpg" alt="Hardtop Mercedes class X">
-      <img src="/images/.jpg" alt="Hardtop Mercedes class X">
+      <img src="/images/5a2870f93cfaa42c83c864a25ae74b0040767989.jpg" alt="Hardtop Mercedes class X-1">
+      <img src="/images/43118e981af2a59013fdf29ccfd5794fe07af258.jpg" alt="Hardtop Mercedes class X-2">
+      <img src="/images/4a6582d7e928ab10065b8f3704067265b6af46eb.jpg" alt="Hardtop Mercedes class X-3">
     </div>
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
