--- a/data/hardtop-mercedes-x-class-double-cabine-2018.html
+++ b/data/hardtop-mercedes-x-class-double-cabine-2018.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="index, follow" />
   <meta name="Description" content="Composit System - Hardtop Mercedes class X">
   <title>Mercedes class X</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/hardtop/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
   <!--<link rel="icon" type="image/png" href="/LA.png">-->
 </head>
