--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
   </main>
 
   <footer>
-    <p>2025 Composit System –</p>
+    <p>&copy; 2025 Composit System - <a href="mentions-legales.html">Mentions légales</a></p>
   </footer>
 </body>
 </html>
