--- a/data/hardtop-mercedes-x-class-double-cabine-2018.html
+++ b/data/hardtop-mercedes-x-class-double-cabine-2018.html
@@ -13,7 +13,7 @@
     /* Styles spécifiques au slider */
     .slider {
       position: relative;
-      max-width: 800px;
+      max-width: 700px;
       margin: auto;
       overflow: hidden;
       border-radius: 10px;
@@ -23,8 +23,9 @@
       transition: transform 0.3s ease-in-out;
     }
     .slides img {
-      width: 100%;
-      flex-shrink: 0;
+      height: auto;
+  flex-shrink: 0;
+  object-fit: contain;
     }
     .slider button {
       position: absolute;
