--- a/data/hardtop-mercedes-x-class-double-cabine-2018.html
+++ b/data/hardtop-mercedes-x-class-double-cabine-2018.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="index, follow" />
   <meta name="Description" content="Composit System - Hardtop Mercedes class X">
   <title>Mercedes class X</title>
-  <link rel="stylesheet" href="/hardtop/style.css" />
+  <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
   <!--<link rel="icon" type="image/png" href="/LA.png">-->
 </head>
@@ -25,9 +25,9 @@
   <!-- SLIDER -->
   <div class="slider" aria-label="Galerie images">
     <div class="slides">
-    <div class="slide"><img src="/hardtop/images/5a2870f93cfaa42c83c864a25ae74b0040767989.jpg" alt="Hardtop Mercedes class X - vue 1"></div>
-    <div class="slide"><img src="/hardtop/images/43118e981af2a59013fdf29ccfd5794fe07af258.jpg" alt="Hardtop Mercedes class X - vue 2"></div>
-    <div class="slide"><img src="/hardtop/images/4a6582d7e928ab10065b8f3704067265b6af46eb.jpg" alt="Hardtop Mercedes class X - vue 3"></div>
+    <div class="slide"><img src="/images/5a2870f93cfaa42c83c864a25ae74b0040767989.jpg" alt="Hardtop Mercedes class X - vue 1"></div>
+    <div class="slide"><img src="/images/43118e981af2a59013fdf29ccfd5794fe07af258.jpg" alt="Hardtop Mercedes class X - vue 2"></div>
+    <div class="slide"><img src="/images/4a6582d7e928ab10065b8f3704067265b6af46eb.jpg" alt="Hardtop Mercedes class X - vue 3"></div>
     </div>
   <button class="prev" aria-label="Image précédente">&#10094;</button>
   <button class="next" aria-label="Image suivante">&#10095;</button>
