--- a/data/hardtop-mercedes-x-class-double-cabine-2018.html
+++ b/data/hardtop-mercedes-x-class-double-cabine-2018.html
@@ -15,8 +15,8 @@
   <div class="container">
     <h1 class="logo"><span class="logo-bold">Composit</span> System</h1>
     <nav>
-      <a href="/index.html">Accueil</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/hardtop/index.html">Accueil</a>
+      <a href="/hardtop/contact.html">Contact</a>
     </nav>
   </div>
 </header>
