--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </h1>
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="Contact.html">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
     </div>
   </header>
